[B]v1.3.2[/B]
- Added extended title information
- Added page information on episode list
- Fixed issue with gzip file openings

[B]v1.3.1[/B]
- Fixed smaller issues in the previous version.

[B]v1.2.2[/B]
- Added other Swiss Channels: RTS, RSI and RTR
- You can now scroll to older episodes of a show
- You can now set how many episodes shall be shown on one page (settings)

[B]v1.2.1[/B]
- Better fanart handling for episodes
- Fixed Bug with gzip urls
- Better error handling

[B]v1.1.0[/B]
- Added Force View
- Added better fanart and logo
- Some Refactorings

[B]v1.0.0[/B]
- Clean up for first release

[B]v0.9.2[/B]
- Improved media info for episodes

[B]v0.9.1[/B]
- Initial version