@@ -4,6 +4,9 @@
   <string id="30002">SRF Podcast Favoriten</string>
   <string id="30003">Zu SRF Podcast Favoriten hinzufuegen</string>
   <string id="30004">Von SRF Favoriten entfernen</string>
+  <string id="30005">Neuste Sendungen</string>
+  <string id="30006">Empfohlene Sendungen</string>
+  <string id="30007">Beliebteste Sendungen</string>  
   <string id="30104">Benutze Fan Art</string>
   <string id="30101">Forciere Menu Views</string>
   <string id="30102">ViewID für Videos</string>
